--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<version>3.2.4</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.1.0-M2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
